# trrs

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  geometry.rs  gl.rs  line.rs  main.rs  matrix.rs  model.rs  triangle.rs  util.rs  zbuf.rs
src/shaders/: ambientocclusion.rs  gouraud.rs  gouraud6l.rs  mod.rs  normalmapping.rs  shadowmapping.rs  specularmapping.rs  texture.rs
